--- a/tools/docker/setup-postgres/docker-compose.yml
+++ b/tools/docker/setup-postgres/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: 'postgres:15.2-alpine'
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=mercury_test
+      - POSTGRES_USER=feeds
+      - POSTGRES_PASSWORD=feeds
+      - POSTGRES_DB=feeds_development
     ports:
       - '5432:5432'
     healthcheck:
-      test: "pg_isready -U postgres -d mercury_test"
+      test: 'pg_isready -U feeds -d feeds_development -p 5432'
       interval: 2s
       timeout: 5s
       retries: 5
