--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -55,12 +55,6 @@ jobs:
           metrics-job-name: ci-lint
           gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
           gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
-          # aws inputs
-          aws-region: ${{ secrets.AWS_REGION }}
-          # gati inputs
-          use-gati: "true"
-          aws-role-arn-gati: ${{ secrets.AWS_OIDC_IAM_ROLE_ARN_GATI }}
-          aws-lambda-url-gati: ${{ secrets.AWS_LAMBDA_URL_GATI }}
           # env inputs
           use-env-files: "true"
           env-files: ./tools/env/ci.env
@@ -70,19 +64,6 @@ jobs:
           go-version-file: go.work
           golangci-lint-version: "v1.53.2"
           golangci-lint-args: --out-format checkstyle:golangci-lint-report.xml ${{ needs.init.outputs.lint_args_packages }}
-
-  ci-lint-charts:
-    runs-on: ubuntu-latest
-    steps:
-      - name: ci-lint-charts
-        uses: smartcontractkit/.github/actions/ci-lint-charts@main
-        with:
-          # chart testing inputs
-          chart-testing-extra-args: "--lint-conf=lintconf.yaml"
-          # grafana inputs
-          metrics-job-name: ci-lint-charts
-          gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
-          gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
 
   ci-lint-misc:
     runs-on: ubuntu-latest
@@ -109,12 +90,6 @@ jobs:
           metrics-job-name: ci-test
           gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
           gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
-          # aws inputs
-          aws-region: ${{ secrets.AWS_REGION }}
-          # gati inputs
-          use-gati: "true"
-          aws-role-arn-gati: ${{ secrets.AWS_OIDC_IAM_ROLE_ARN_GATI }}
-          aws-lambda-url-gati: ${{ secrets.AWS_LAMBDA_URL_GATI }}
           # docker inputs
           use-docker-compose: "true"
           docker-compose-workdir: ./tools/docker/setup-postgres
@@ -143,7 +118,7 @@ jobs:
         uses: smartcontractkit/.github/actions/cicd-build-publish-artifacts-go@main
         with:
           # general inputs
-          app-name: mercury-pipeline-${{ matrix.package }}
+          app-name: chainlink-feeds-${{ matrix.package }}
           publish: "true"
           # grafana inputs
           metrics-job-name: ci-build-artifacts-matrix (${{ matrix.package }})
@@ -194,19 +169,6 @@ jobs:
           hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
           this-job-name: ci-build-artifacts
         continue-on-error: true
-
-  ci-build-charts:
-    runs-on: ubuntu-latest
-    steps:
-      - name: ci-build-charts
-        uses: smartcontractkit/.github/actions/cicd-build-publish-charts@main
-        with:
-          # general inputs
-          charts-dir: helm
-          # grafana inputs
-          metrics-job-name: ci-build-charts
-          gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
-          gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
 
   ci-sonarqube:
     needs: [ci-lint, ci-test]
