--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -53,7 +53,7 @@ jobs:
           # go inputs
           use-go-cache: true
           go-cache-dep-path: "**/go.sum"
-          go-version-file: go.work
+          go-version-file: go.mod
           golangci-lint-version: "v1.53.2"
           golangci-lint-args: --out-format checkstyle:golangci-lint-report.xml ${{ needs.init.outputs.lint_args_packages }}
 
@@ -80,7 +80,7 @@ jobs:
           # go inputs
           use-go-cache: "true"
           go-cache-dep-path: "**/go.sum"
-          go-version-file: go.work
+          go-version-file: go.mod
           go-test-cmd: make test-ci
 
   cicd-build-publish-artifacts-dev-matrix:
@@ -114,7 +114,7 @@ jobs:
           aws-role-arn-gati: ${{ secrets.AWS_OIDC_IAM_ROLE_ARN_GATI }}
           aws-lambda-url-gati: ${{ secrets.AWS_LAMBDA_URL_GATI }}
           # golang inputs
-          go-version-file: go.work
+          go-version-file: go.mod
           # goreleaser inputs
           goreleaser-args: "--nightly --config ./${{ matrix.package }}/.goreleaser.ci.yaml"
           goreleaser-dist: goreleaser-pro
