--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/smartcontractkit/chainlink-feeds#readme",
   "dependencies": {
-    "median": "workspace:*",
+    "median": "workspace:*"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
