--- a/.goreleaser-template.yaml
+++ b/.goreleaser-template.yaml
@@ -7,7 +7,7 @@ env:
 builds:
   - binary: "{{ .ProjectName }}"
     id: linux-amd64
-    main: ./cmd
+    main: ../cmd/chainlink-feeds
     env:
       - CGO_ENABLED=1
       - CC=$ZIG_EXEC cc -target x86_64-linux-gnu
@@ -21,7 +21,7 @@ builds:
       - amd64
   - binary: "{{ .ProjectName }}"
     id: linux-arm64
-    main: ./cmd
+    main: ../cmd/chainlink-feeds
     env:
       - CGO_ENABLED=1
       - CC=$ZIG_EXEC cc -target aarch64-linux-gnu
