--- a/median/.goreleaser.ci.yaml
+++ b/median/.goreleaser.ci.yaml
@@ -1,12 +1,12 @@
 # Requires GoReleaser Pro
 includes:
   - from_file:
-      path: ./.goreleaser.yaml
+      path: ./median/.goreleaser.yaml
 
 nightly:
   # This is a GoReleaser Pro feature that we use for pre-releases.
   # Default is `{{ incpatch .Version }}-{{ .ShortCommit }}-nightly`.
-  name_template: '{{ incpatch .Version }}-{{ .ShortCommit }}-devel'
+  name_template: "{{ incpatch .Version }}-{{ .ShortCommit }}-devel"
 
   # Tag name to create if publish_release is enabled.
   tag_name: devel
