--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,10 @@
       "repo": "smartcontractkit/mercury-pipeline"
     }
   ],
+  "privatePackages": {
+    "version": true,
+    "tag": true
+  },
   "commit": false,
   "fixed": [],
   "linked": [],
