--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -2,8 +2,8 @@ name: push-master
 
 on:
   push:
-    # branches:
-    #   - master
+    branches:
+      - master
 
 env:
   PACKAGES: "median"
@@ -119,21 +119,23 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-role-arn: ${{ secrets.AWS_OIDC_CHAINLINK_FEEDS_CI_CHANGESET_TOKEN_ISSUER_ROLE_ARN }}
           aws-lambda-url: ${{ secrets.AWS_FOUNDATIONS_GATI_URL }}
+          # grafana inputs
+          metrics-job-name: cd-release
 
-  # cicd-build-publish-artifacts-release:
-  #   # Call push-tag-release for median@7.7.7
-  #   name: Call push-tag-release for ${{ matrix.package.name }}@${{ matrix.package.version }}
-  #   if: needs.cd-release.outputs.changesets_published == 'true'
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       package: ${{ fromJson(needs.cd-release.outputs.changesets_publishedPackages) }}
-  #   permissions:
-  #     id-token: write
-  #     contents: write
-  #     actions: read
-  #   needs: [cd-release]
-  #   uses: ./.github/workflows/push-tag-release.yml
-  #   secrets: inherit
-  #   with:
-  #     tag: "${{ matrix.package.name }}@${{ matrix.package.version }}"
+  cicd-build-publish-artifacts-release:
+    # Call push-tag-release for median@7.7.7
+    name: Call push-tag-release for ${{ matrix.package.name }}@${{ matrix.package.version }}
+    if: needs.cd-release.outputs.changesets_published == 'true'
+    strategy:
+      fail-fast: false
+      matrix:
+        package: ${{ fromJson(needs.cd-release.outputs.changesets_publishedPackages) }}
+    permissions:
+      id-token: write
+      contents: write
+      actions: read
+    needs: [cd-release]
+    uses: ./.github/workflows/push-tag-release.yml
+    secrets: inherit
+    with:
+      tag: "${{ matrix.package.name }}@${{ matrix.package.version }}"
