--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -30,7 +30,6 @@ jobs:
         shell: bash
         env:
           PACKAGES: ${{ env.PACKAGES }}
-        # Convert "producer,reports_consumer" to "./producer/... ./reports_consumer/..."
         run: echo "lint_args_packages=$(echo "./$(echo $PACKAGES | sed 's/,/\/... .\//g;s/$/\/.../')")" | tee -a "${GITHUB_OUTPUT}"
 
   ci-lint:
@@ -41,7 +40,7 @@ jobs:
       actions: read
     steps:
       - name: ci-lint
-        uses: smartcontractkit/.github/actions/ci-lint-go@9e7cc0779934cae4a9028b8588c9adb64d8ce68c # ci-lint-go@0.1.0
+        uses: smartcontractkit/.github/actions/ci-lint-go@f94f14f46f7b3c51c49bffbea420edd2f01134dc # ci-lint-go@0.2.0
         with:
           # grafana inputs
           metrics-job-name: ci-lint
@@ -120,6 +119,10 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-role-arn: ${{ secrets.AWS_OIDC_CHAINLINK_FEEDS_CI_CHANGESET_TOKEN_ISSUER_ROLE_ARN }}
           aws-lambda-url: ${{ secrets.AWS_FOUNDATIONS_GATI_URL }}
+          # grafana inputs
+          metrics-job-name: cd-release
+          gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
+          gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
 
   cicd-build-publish-artifacts-release:
     # Call push-tag-release for median@7.7.7
