--- a/.github/workflows/push-tag-release.yml
+++ b/.github/workflows/push-tag-release.yml
@@ -65,7 +65,7 @@ jobs:
       actions: read
     steps:
       - name: cicd-build-publish-artifacts-release
-        uses: smartcontractkit/.github/actions/cicd-build-publish-artifacts-go@25645c21796ebb5554693fcc0d312dc88330fbe0 # cicd-build-publish-artifacts-go@0.2.0
+        uses: smartcontractkit/.github/actions/cicd-build-publish-artifacts-go@5b1046c28343660ecb84844c6fa95a66d1cdb52e # cicd-build-publish-artifacts-go@0.2.2
         with:
           # general inputs
           app-name: chainlink-feeds-${{ needs.check-tags.outputs.tag-name }}
@@ -74,8 +74,9 @@ jobs:
           checkout-ref: ${{ inputs.tag }}
           # grafana inputs
           metrics-job-name: cicd-build-publish-artifacts-release
-          gc-basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
-          gc-host: ${{ secrets.GRAFANA_CLOUD_HOST }}
+          gc-basic-auth: ${{ secrets.GRAFANA_INTERNAL_BASIC_AUTH }}
+          gc-host: ${{ secrets.GRAFANA_INTERNAL_HOST }}
+          gc-org-id: ${{ secrets.GRAFANA_INTERNAL_TENANT_ID }}
           # aws inputs
           aws-region: ${{ secrets.AWS_REGION }}
           aws-role-arn: ${{ secrets.AWS_OIDC_IAM_ROLE_ARN }}
