--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -86,7 +86,7 @@ jobs:
       actions: read
     steps:
       - name: ci-test
-        uses: smartcontractkit/.github/actions/ci-test-go@5b1046c28343660ecb84844c6fa95a66d1cdb52e # ci-test-go@0.1.2 
+        uses: smartcontractkit/.github/actions/ci-test-go@a15f84fcc168830a5341c7f08592eed85bb34913 # ci-test-go@0.3.1
         with:
           # grafana inputs
           metrics-job-name: ci-test
@@ -104,6 +104,7 @@ jobs:
           go-cache-dep-path: "**/go.sum"
           go-version-file: go.mod
           go-test-cmd: make test-ci
+          enable-go-test-race: "true"
 
   ci-sonarqube:
     needs: [ci-lint, ci-test]
@@ -119,5 +120,6 @@ jobs:
           gc-host: ${{ secrets.GRAFANA_INTERNAL_HOST }}
           gc-org-id: ${{ secrets.GRAFANA_INTERNAL_TENANT_ID }}
           # sonarqube inputs
+          include-lint: "true"
           sonar-token: ${{ secrets.SONAR_TOKEN }}
           sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
