chore: update package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chainlink-feeds",
+  "name": "@chainlink/feeds",
   "version": "0.1.0",
   "description": "Chainlink feeds plugins",
   "private": true,
