--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -86,7 +86,7 @@ jobs:
       actions: read
     steps:
       - name: ci-test
-        uses: smartcontractkit/.github/actions/ci-test-go/0.3.5
+        uses: smartcontractkit/.github/actions/ci-test-go@ci-test-go/0.3.5
         with:
           # grafana inputs
           metrics-job-name: ci-test
