--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -65,7 +65,7 @@ jobs:
       actions: read
     steps:
       - name: ci-test
-        uses: smartcontractkit/.github/actions/ci-test-go@5b1046c28343660ecb84844c6fa95a66d1cdb52e # ci-test-go@0.1.2 
+        uses: smartcontractkit/.github/actions/ci-test-go@ci-test-go/0.3.5
         with:
           # grafana inputs
           metrics-job-name: ci-test
